--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+/* CUSTOM-PROPS */
+:root {
+--body-bg: #f1f4ff;
+--green:#4dc490;
+--purple:#655af2;
+--red:#f03535;
+--text-color:#000;
+}
+
+
+
+
 /* GLOBAL */
 
 html {
@@ -22,7 +34,7 @@ font-family: "Arial";
 font-size: 16px;
 line-height: 1.5;
 background-color: #fff;
-color: black;
+color: var(--text-color);
 }
 
 
