--- a/css/styles.css
+++ b/css/styles.css
@@ -101,3 +101,120 @@ img {
   padding-top: 80px;
   padding-bottom: 80px;
 }
+
+
+
+/* HERO */
+.into-page {
+display: flex;
+
+}
+
+.hero {
+
+
+--text-color: #fff;
+  display: flex;
+  flex-direction: column;
+width: 100%;
+max-width: 570px;
+overflow: hidden;
+border-radius: 20px;
+color: var(--text-color);
+}
+
+
+.hero-main {
+  background-image: url("../img/bg-img.jpg");
+background-color: #222;
+  display: flex;
+align-items: flex-start;
+flex-direction: column;
+  flex-grow: 1;
+padding: 55px 60px;
+background-size: cover;
+background-position: center center;
+background-repeat: no-repeat;
+
+
+}
+
+
+.hero-badge {
+  padding: 5px 15px;
+border: 1px solid var(--text-color);
+margin-bottom: 60px;
+border-radius: 41px;
+font-size: 14px;
+line-height: normal;
+font-weight: 500;
+
+}
+
+
+.hero-heading {
+  margin-top: 0;
+  padding-right: 30px;
+  margin-bottom: 25px;
+  font-size: 36px;
+  line-height: 46px;
+}
+
+
+.hero-text {
+margin-top: 0;
+font-size: 16px;
+line-height: 26px;
+
+}
+
+
+
+.hero-bottom {
+  background-color: var(--green);
+  padding:28px ;
+  font-size: 19px;
+text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* RETINA-BG */
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+.hero {
+  background-image: url("../img/bg-img@2x.jpg");
+}
+}
