--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,15 @@ html {
   box-sizing: inherit;
 }
 
+
+
+*:focus {
+outline: 2px dotted var(--purple);
+outline-offset: 3px;
+}
+
+
+
 body {
   display: flex;
   flex-direction: column;
@@ -87,8 +96,10 @@ img {
 
 /* CONTAINER */
 .container {
+
   width: 100%;
   max-width: 1192px;
+
   padding-left: 20px;
   padding-right: 20px;
   margin-right: auto;
@@ -97,6 +108,7 @@ img {
 
 /* MAIN-CONTENT */
 .main-content {
+
   flex-grow: 1;
   padding-top: 80px;
   padding-bottom: 80px;
@@ -176,6 +188,93 @@ line-height: 26px;
   font-size: 19px;
 text-align: center;
 }
+
+
+
+/* SIGNUP-FORM */
+.signup-form {
+width: 100%;
+max-width: 570px;
+padding: 55px 60px 40px;
+border-radius: 20px;
+overflow: hidden;
+background-color: #fff;
+margin-left:12px ;
+
+
+
+}
+
+
+.signup-form-heading {
+  margin-top: 0;
+margin-bottom: 65px;
+font-size: 32px;
+line-height: 42px;
+font-weight: 600;
+}
+
+
+.signup-form-fields {
+  display: flex;
+  flex-direction: column;
+}
+
+
+.signup-form-field{
+padding-top: 15px;
+padding-bottom: 14px;
+border: 0;
+border-bottom: 1px solid #555;
+color: #555;
+margin-bottom: 65px;
+}
+
+
+
+.signup-form-field:not(:last-child){
+  margin-bottom: 20px;
+}
+
+
+
+.signup-form-field:focus{
+  border-color: #000;
+  font-weight: 400;
+  color: #000;
+}
+
+
+
+
+.signup-form-submit {
+  display: block;
+  width: 100%;
+  padding: 20px ;
+  border: 0;
+  margin-bottom: 8px;
+border-radius: 10px;
+background-color: var(--purple);
+font-weight: 600;
+color: #fff;
+cursor:pointer;
+}
+
+
+.signup-formnotice {
+  font-size: 11px;
+  line-height: 15px;
+text-align: center;
+}
+
+
+
+.signup-form-nitice-link {
+  font-weight: 500;
+  color: var(--red);
+}
+
+
 
 
 
